--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -459,6 +459,9 @@
   "terms___conditions": {
     "message": "Условия и положения"
   },
+  "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+  },
   "tired_of_cookie_popups_": {
     "message": "УСТАЛИ ОТ ВСПЛЫВАЮЩИХ УВЕДОМЛЕНИЙ О ФАЙЛАХ COOKIE?"
   },
@@ -537,6 +540,9 @@
   },
   "yes": {
     "message": "Да"
+  },
+  "you_are_awesome_": {
+    "message": "You are awesome!"
   },
   "you_are_signed_in_as_": {
     "message": "Вы вошли как:"
