Fix korean extension name

--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -287,7 +287,7 @@
     "message": "Ghostery가 귀하의 완전한 개인 정보 보호를 지원할 수 있게 하고 모든 팝업 및 추적을 거부하십시오. 또는 직접 실행할 수도 있습니다!"
   },
   "manifest_name": {
-    "message": "고스트 트래커 및 광고 차단기 - 프라이버시 AdBlock"
+    "message": "고스터리 트래커 및 광고 차단기 - 프라이버시 AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery는 강력한 개인정보 보호 확장 프로그램입니다. 광고와 트래커를 차단하고 웹 사이트의 속도를 높여줍니다."
