--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -287,7 +287,7 @@
     "message": "Ghostery가 귀하의 완전한 개인 정보 보호를 지원할 수 있게 하고 모든 팝업 및 추적을 거부하십시오. 또는 직접 실행할 수도 있습니다!"
   },
   "manifest_name": {
-    "message": "고스트 트래커 및 광고 차단기 - 프라이버시 AdBlock"
+    "message": "고스터리 트래커 및 광고 차단기 - 프라이버시 AdBlock"
   },
   "manifest_short_description": {
     "message": "Ghostery는 강력한 개인정보 보호 확장 프로그램입니다. 광고와 트래커를 차단하고 웹 사이트의 속도를 높여줍니다."
@@ -459,6 +459,9 @@
   "terms___conditions": {
     "message": "사용 약관 "
   },
+  "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+  },
   "tired_of_cookie_popups_": {
     "message": "쿠키 팝업이 너무 많습니까?"
   },
@@ -537,6 +540,9 @@
   },
   "yes": {
     "message": "예 "
+  },
+  "you_are_awesome_": {
+    "message": "You are awesome!"
   },
   "you_are_signed_in_as_": {
     "message": "로그인한 계정:"
