--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -123,6 +123,9 @@
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Affiche le décompte des trackers sur l'icône Ghostery dans la barre d'outils du navigateur."
   },
+  "dnr_output__@_0__": {
+    "message": "DNR Output ($${0})"
+  },
   "don_t_ask_again": {
     "message": "Ne demande plus rien"
   },
