--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -123,6 +123,9 @@
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Mostra il conteggio dei tracker sull’icona di Ghostery nella barra degli strumenti del browser."
   },
+  "dnr_output__@_0__": {
+    "message": "DNR Output ($${0})"
+  },
   "don_t_ask_again": {
     "message": "Non chiederlo più"
   },
