--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -123,6 +123,9 @@
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "브라우저 툴바 Ghostery 아이콘상에 트래커 개수를 표시합니다."
   },
+  "dnr_output__@_0__": {
+    "message": "DNR Output ($${0})"
+  },
   "don_t_ask_again": {
     "message": "다시 묻지 마세요"
   },
