--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -123,6 +123,9 @@
   "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
     "message": "Показывает счетчик трекеров у значка Ghostery на панели инструментов в браузере."
   },
+  "dnr_output__@_0__": {
+    "message": "DNR Output ($${0})"
+  },
   "don_t_ask_again": {
     "message": "Не спрашивай больше"
   },
